# LearinIt-Android-Old

oldCppFiles/: CMakeLists.txt  JavaPipelines.cpp  JavaPipelines.h
oldCppFiles/lib/: native-lib.cpp
oldCppFiles/models/: Lesson.cpp  Lesson.h  LessonResults.cpp  LessonResults.h  Media.cpp  Media.h  Params.cpp  Params.h  Program.cpp  Program.h  Quation .h  Subject.cpp  Subject.h  UserPreferences.cpp  UserPreferences.h  separateLessons.cpp  separateLessons.h
oldCppFiles/test/: Test.cpp
oldCppFiles/utilities/: ProgramUtilities.cpp  ProgramUtilities.h  TimeUtilities.cpp  TimeUtilities.h
